# warp

./: .gitignore  CODE_REVIEW_ISSUES.md  CONTEXT.md  Cargo.toml  DEPENDENCY_GRAPH.md  LOCAL_FIRST.md  MASTER_TODO.md  NEXT_STEPS.md  PLAN.md  PRD.md  SLIM_PLAN_V2.md  TODO_REMAINING.md
.cargo/: config.toml
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
app/: Cargo.toml
app/src/: app_menus.rs  app_state.rs  changelog_model.rs  download_method.rs  features.rs  ids.rs  lib.rs  network_log_view.rs  referral_theme_status.rs  root_view.rs  root_view_tests.rs  server_block.rs  smoke_test.rs  sync_queue.rs  tab.rs  tracing.rs
app/src/ai/: agent_conversations_model.rs  agent_conversations_model_tests.rs  agent_tips.rs  ai_document_view.rs  api_error.rs  artifact_download.rs  artifact_download_tests.rs  auth_secret_types.rs  aws_credentials.rs  bedrock_credentials.rs  cloud_agent_settings.rs  connected_self_hosted_workers.rs  conversation_details_panel.rs  conversation_details_panel_tests.rs  conversation_rename.rs  conversation_utils.rs  geap_credentials.rs  geap_credentials_tests.rs  harness_availability.rs  llms.rs  llms_tests.rs  mod.rs  persisted_workspace.rs  request_usage_model.rs  request_usage_model_tests.rs
app/src/ai_assistant/: mod.rs  panel.rs  requests.rs  transcript.rs
app/src/auth/: anonymous_id.rs  auth_manager.rs  auth_manager_tests.rs  auth_state.rs  auth_view_body.rs  (+6 more)
archive/: MASTER_TODO.md  SLIM_PLAN_V2.md
crates/ai/: Cargo.toml
crates/cloud_object_client/: Cargo.toml
crates/cloud_object_models/: Cargo.toml
crates/cloud_object_persistence/: Cargo.toml
crates/cloud_objects/: Cargo.toml
crates/graphql/: Cargo.toml
crates/http_client/: Cargo.toml
crates/isolation_platform/: Cargo.toml
crates/managed_secrets/: Cargo.toml
crates/mcp/: Cargo.toml
crates/mcp_types/: Cargo.toml
crates/persistence/: Cargo.toml
crates/warp_assets/: Cargo.toml
crates/warp_server_auth/: Cargo.toml
crates/warp_server_client/: Cargo.toml
crates/warp_types/: Cargo.toml
crates/warp_types/src/: auth_types.rs  ids.rs  lib.rs  server_timestamp.rs  uint32.rs  user_uid.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: lib.rs  native.rs
lib/rust-genai/: Cargo.toml
scripts/: setup-worktrees.ps1  smoke-test.ps1
scripts/prompts/: wave0-smoke-test.md  wave1-delete-cloud_object_client.md  wave1-delete-cloud_object_persistence.md  wave1-delete-crate-TEMPLATE.md  wave1-delete-firebase_auth.md  wave1-delete-managed_secrets.md  wave1-delete-warp_graphql.md  wave1-delete-warp_server_auth.md  wave1-delete-warp_server_client.md  wave2-delete-drive.md  wave2-delete-module-TEMPLATE.md  wave2-delete-server-cloud-objects.md  wave2-delete-server-graphql.md  wave2-delete-server-iap.md  wave2-delete-server-sync-queue.md  wave2-delete-workspaces.md  wave3-ids-rewrite.md  wave3-server-api-extraction.md  wave3-telemetry-stub.md  wave4-delete-server.md
(+645 files in other folders)
