[package]
name = "warp_types"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[features]
graphql = ["dep:cynic", "dep:warp_graphql_schema"]
test-util = []

[dependencies]
chrono = { workspace = true }
lasso = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
schemars = { version = "1", features = ["uuid1"] }
settings_value = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
cynic = { workspace = true, optional = true }
warp_graphql_schema = { workspace = true, optional = true }
