[package]
name = "websocket"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls", "proxy", "graphql"]
tls = ["dep:rustls", "dep:rustls-platform-verifier", "dep:tokio-rustls"]
proxy = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
graphql = ["dep:graphql-ws-client"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
percent-encoding = "2.3.1"
itertools.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
cfg-if.workspace = true
log.workspace = true
thiserror.workspace = true
pin-project.workspace = true
url.workspace = true

[dev-dependencies]
futures-test-sink = "0.1.1"
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[target.'cfg(target_family = "wasm")'.dependencies]
ws_stream_wasm = "0.7"
graphql-ws-client = { workspace = true, features = ["ws_stream_wasm"], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-io.workspace = true
async-net = "2.0.0"
async-tungstenite = { version = "0.28.2", features = ["tokio-rustls-manual-roots"] }
http-body-util = { version = "0.1", optional = true }
hyper = { workspace = true, features = ["client", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.26.4", optional = true }
graphql-ws-client = { workspace = true, features = ["tungstenite"], optional = true }
rustls = { version = "0.23.29", optional = true }
rustls-platform-verifier = { version = "0.6.1", optional = true }
